--- a/blockpost.html
+++ b/blockpost.html
@@ -6,13 +6,15 @@
 <body>
     <div id="container">
         <div id="cabecera"> 
-            Hyperblog <span id="tagline"> Tu blog de confianza </span>
+            Hyperblog 
+            <span id="tagline"> Tu blog de confianza </span>
         </div>
         <div id="post"> 
 <h1> Este es el título atractivo e interesante del post </h1>
-    <p> y este es el parrafo donde vamos a explicar las cosas increibles que se pueden hacer con ramas 
+    <p> y este es el párrafo donde vamos a explicar las cosas increíbles que se pueden hacer con ramas 
     </p>
     <p> Los blogs son la mejor forma de compartir información y tus ideas.</p>
+    <p> Suscribete y dale like </p>
             </div>
      </div>
 </body>
