--- a/blockpost.html
+++ b/blockpost.html
@@ -11,7 +11,7 @@
         </div>
         <div id="post"> 
 <h1> Este es el título atractivo e interesante del post </h1>
-    <p> y este es el párrafo donde vamos a explicar las cosas increíbles que se pueden hacer con ramas 
+    <p> y este es el p&aacute;rrafo donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas 
     </p>
     <p> Los blogs son la mejor forma de compartir información y tus ideas.</p>
     <p> Suscribete y dale like </p>
